v0.7.0:
  * add official support for python 3.7 and 3.8
v0.6.3:
  * fix blocking of KeyBoardInterrupt (see #6)
v0.6.2:
  * fix wrong polarization in R and T components (see #4)
v0.6.1:
  * less forced parameters for custom deconvolution function
v0.6.0:
  * use new matplotlib colors (requires matplotlib>2)
  * small bugs fixed
v0.5.1:
  * adaptions for obspyh5 v0.3
v0.5.0:
  * add support for python3 (requires ObsPy>=1.0.3)
  * add possibility to use custom deconvolution
  * remove warnings and warn keyword for unsupported file formats
v0.4.2:
  * remove caching support (joblib)
  * first steps towards python3 compatibility
  * small bug fix for obspy v1.0.2 (see obspy issue 1507)
v0.4.1:
  * fix online documentation
v0.4.0:
  * add profile module and possibility to calculate profiles
  * add new imaging and util modules
  * add plots for station map, piercing point map, profile map
  * add plot for profile
  * add class to iterate through a collection of threecomponent streams
    (IterMultipleComponents)
  * add iterator yielding metadata or data of event-station pairs
    (iter_event_metadata and iter_event_data)
  * add RFStream.trim2 and slice2 methods to trim/slice around given time
    (e.g. onset)
  * refactor rf method to use the new iterators
  * refactor parameters of deconvolve method,
    discard a lot of unnecessary parameters
  * rewrite batch module with updated interface
  * updated and expanded documentation
  * updated and expanded tests, test coverage is now very good
  * remove logging from rf.batch again
  * bug fix: correct moveout for S receiver functions
  * bux fix: correct wrong shift in frequency deconvolution
  * a lot of refactoring and smaller bugfixes
v0.3.0:
  * fix ObsPy depreciation warnings
  * remove support for ObsPy<1.0
v0.2.1:
  * Q file support: The COMMENT field in the header file is now used to store
    all non-standard information. Therefore, projects using Q file format
    should be recreated.
v0.2.0: